--- a/package.json
+++ b/package.json
@@ -19,13 +19,19 @@
     "i18next": "^23.7.18",
     "i18next-http-backend": "^2.4.2",
     "npm": "^10.3.0",
+    "postcss": "^8.4.33",
     "prettier-eslint": "^13.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
     "react-i18next": "^14.0.1",
+    "react-icons": "^4.4.0",
+    "react-particles": "^2.12.2",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.12.2",
+    "sass": "^1.70.0",
+    "tailwindcss": "^3.4.1",
+    "tsparticles": "^3.1.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -59,7 +65,6 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-typescript-sort-keys": "^2.3.0",
-    "prettier": "^2.3.0",
-    "tailwindcss": "^3.4.1"
+    "prettier": "^2.3.0"
   }
 }
