--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "paths": {
       "assets/*": ["src/assets/*"],
       "components/*": ["src/components/*"],
@@ -23,5 +23,6 @@
       "containers/*": ["src/containers/*"]
     }
   },
+
   "include": ["src"]
 }
