--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,175 +1,3 @@
 {
-  "extends": [
-    "plugin:react/recommended",
-    "plugin:@typescript-eslint/recommended",
-    "prettier",
-    "prettier/react"
-  ],
-  "plugins": [
-    "@typescript-eslint",
-    "eslint-plugin-prettier",
-    "react-hooks",
-    "import"
-  ],
-  "env": {
-    "webextensions": true
-  },
-  "settings": {
-    "react": {
-      "version": "detect"
-    }
-  },
-  "overrides": [
-    {
-      "files": ["*.{ts,tsx}"],
-      "parser": "@typescript-eslint/parser",
-      "parserOptions": {
-        "project": "**/tsconfig.json",
-        "tsconfigRootDir": ".",
-        "sourceType": "module"
-      },
-      "plugins": ["typescript-sort-keys"],
-      "rules": {
-        "typescript-sort-keys/interface": 1,
-        "typescript-sort-keys/string-enum": 1,
-        "@typescript-eslint/switch-exhaustiveness-check": 2
-      }
-    }
-  ],
-  "rules": {
-    "@typescript-eslint/no-explicit-any": "off",
-    "@typescript-eslint/no-non-null-assertion": "off",
-    //Using this to allow we start / use some values as empty object -> {}
-    "@typescript-eslint/ban-types": [
-      "error",
-      {
-        "extendDefaults": true,
-        "types": {
-          "{}": false
-        }
-      }
-    ],
-
-    // * ESLint default rules
-    "array-callback-return": "error",
-    "arrow-body-style": ["error", "as-needed"],
-    "camelcase": "warn",
-    "eol-last": "warn",
-    "eqeqeq": "warn",
-    "no-nested-ternary": "off",
-    "no-undef-init": "warn",
-    "no-unneeded-ternary": "error",
-    "no-unused-vars": "warn",
-    "no-shadow": "warn",
-    "no-var": "warn",
-    "semi": "error",
-    "comma-dangle": [
-      "error",
-      {
-        "arrays": "always-multiline",
-        "objects": "always-multiline",
-        "imports": "always-multiline",
-        "exports": "always-multiline",
-        "functions": "never"
-      }
-    ],
-
-    // * Plugins rules
-    "import/no-extraneous-dependencies": "error",
-    "import/order": [
-      "warn",
-      {
-        "groups": [
-          ["builtin", "external"],
-          ["internal", "parent"],
-          ["sibling", "index", "object", "type"]
-        ],
-        "pathGroups": [
-          {
-            "pattern": "@pollum-io/**",
-            "group": "internal",
-            "position": "before"
-          },
-          {
-            "pattern": "assets/**",
-            "group": "internal"
-          },
-          {
-            "pattern": "components/**",
-            "group": "internal"
-          },
-          {
-            "pattern": "constants/**",
-            "group": "internal"
-          },
-          {
-            "pattern": "hooks/**",
-            "group": "internal"
-          },
-          {
-            "pattern": "pages/**",
-            "group": "internal"
-          },
-          {
-            "pattern": "routers/**",
-            "group": "internal"
-          },
-          {
-            "pattern": "scripts/**",
-            "group": "internal"
-          },
-          {
-            "pattern": "state/**",
-            "group": "internal"
-          },
-          {
-            "pattern": "types/**",
-            "group": "internal"
-          },
-          {
-            "pattern": "utils/**",
-            "group": "internal"
-          }
-        ],
-        "pathGroupsExcludedImportTypes": ["@pollum-io/**"],
-        "newlines-between": "always",
-        "alphabetize": {
-          "order": "asc",
-          "caseInsensitive": true
-        }
-      }
-    ],
-
-    "prettier/prettier": [
-      "error",
-      {
-        "trailingComma": "es5",
-        "tabWidth": 2,
-        "semi": true,
-        "singleQuote": true
-      }
-    ],
-
-    "react/no-unescaped-entities": "off",
-    "react/jsx-filename-extension": [
-      "error",
-      { "extensions": [".jsx", ".tsx"] }
-    ],
-
-    "react-hooks/rules-of-hooks": "error",
-
-    "@typescript-eslint/ban-ts-comment": "off",
-    "@typescript-eslint/naming-convention": [
-      "warn",
-      {
-        "selector": "interface",
-        "format": ["PascalCase"],
-        "custom": {
-          "regex": "^I[A-Z]",
-          "match": true
-        }
-      }
-    ],
-    "@typescript-eslint/no-empty-function": "warn"
-  }
+  "extends": "@rocketseat/eslint-config/react"
 }
