--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,5 @@
 {
-  "semi": true,
-  "singleQuote": true,
-  "arrowParens": "always",
-  "tabWidth": 2,
-  "trailingComma": "es5",
-  "bracketSpacing": true
+  "plugins": [
+    "prettier-plugin-tailwindcss"
+  ]
 }
