--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "exportall.config.folderListener": ["/src/components", "/src/styles"]
+  "exportall.config.folderListener": [
+    "/src/components",
+    "/src/styles"
+  ],
+  "typescript.tsdk": "node_modules\\typescript\\lib"
 }
