--- a/package.json
+++ b/package.json
@@ -14,13 +14,10 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.4.0",
     "date-fns": "^2.16.1",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-import": "^2.23.3",
     "i18next": "^23.7.18",
     "i18next-http-backend": "^2.4.2",
     "npm": "^10.3.0",
     "postcss": "^8.4.33",
-    "prettier-eslint": "^13.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.1",
@@ -28,10 +25,9 @@
     "react-particles": "^2.12.2",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
-    "react-tsparticles": "^2.12.2",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.70.0",
     "tailwindcss": "^3.4.1",
-    "tsparticles": "^3.1.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -39,7 +35,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --cache \"src/**/*.{js,jsx,ts,tsx}\"",
+    "lint:fix": "eslint --cache --fix \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "eslintConfig": {
     "extends": [
@@ -60,11 +58,10 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^7.27.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-typescript-sort-keys": "^2.3.0",
-    "prettier": "^2.3.0"
+    "@rocketseat/eslint-config": "^2.2.2",
+    "@types/react-transition-group": "^4.4.10",
+    "eslint": "^8.57.0",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.11"
   }
 }
