--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.1",
     "react-icons": "^4.4.0",
+    "react-intersection-observer": "^9.8.1",
     "react-particles": "^2.12.2",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
